@@ -1,5 +1,17 @@
 2011-01-21  Geoffrey Garen  <ggaren@apple.com>
 
+        Reviewed by Beth Dakin.
+
+        Reorganized MarkedSpace, making many of its functions private.
+
+        * runtime/JSCell.h:
+        (JSC::JSCell::Heap::heap):
+        * runtime/MarkedSpace.h:
+        (JSC::MarkedSpace::globalData):
+        (JSC::MarkedSpace::heap):
+
+2011-01-21  Geoffrey Garen  <ggaren@apple.com>
+
         Try to fix build: moved helper function out of #ifdef.
 
         * runtime/MachineStackMarker.cpp:
